Some edits in the markup for stylization were involved

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,16 +9,16 @@
     <header class="page-header">
       <nav class="main-nav">
         <a class="main-nav__logo" href="#">
-          <img class="main-nav__icon main-nav__icon--logo" src="" alt="">
+          <img class="main-nav__icon main-nav__icon--logo" src="img/icon-logo-mobile.svg" alt="">
         </a>
         <a class="main-nav__logo" href="#">
-          <img class="main-nav__icon main-nav__icon--text" src="" alt="">
+          <img class="main-nav__icon main-nav__icon--text" src="img/logo-mobile-header.svg" alt="">
         </a>
         <div class="menu">
-          <button class="menu__logo">
-            <span class="visually-hidden">Открыть меню</span>
-          </button>
-          <div class="main-nav__list category-list">
+          <div class="menu__logo">
+            <img src="img/icon-mobile-menu.svg" alt="logo">
+          </div>
+          <div class="main-nav__list category-list visually-hidden">
             <a class="menu__link" href="index.html">Главная</a>
             <a class="menu__link" href="form.html">Подбор программы</a>
             <a class="menu__link menu__link--active" href="catalog.html">Каталог продукции</a>
@@ -27,164 +27,234 @@
       </nav>
     </header>
 
-    <main class="page-main">
+    <main class="page-main page-catalog">
       <h1 class="page-main__title">Каталог продукции</h1>
-      <section class="page-catalog page-main__catalog">
+      <section class="page-main__catalog">
         <ul class="page-catalog__products-list">
           <li class="page-catalog__item catalog-item">
             <div class="catalog-item__info">
-              <a class="catalog-item__link" href="chicken-small.html">
-                <img class="catalog-item__img" src="" alt="банка Cat Energy Pro 500 г">
-              </a>
-              <a class="catalog-item__link" href="chicken-small.html">
-                <h3 class="catalog-item__title">Cat Energy Pro 500 г</h3>
-              </a>
-              <dl class="catalog-item__descriptopn">
-                <dt>Объем</dt>
-                <dd>500 г</dd>
-                <dt>Вкус</dt>
-                <dd>Курица</dd>
-                <dt>Цена</dt>
-                <dd>700 Р.</dd>
-              </dl>
+              <div class="catalog-item-container">
+                <a class="catalog-item__link" href="chicken-small.html">
+                  <img class="catalog-item__img" src="img/chicken-small-mobile@1x.jpg" alt="банка Cat Energy Pro 500 г">
+                </a>
+                <div class="catalog-item__text">
+                  <a class="catalog-item__link" href="chicken-small.html">
+                    <h3 class="catalog-item__title">Cat Energy Pro 500 г</h3>
+                  </a>
+                  <dl class="catalog-item__description">
+                    <div class="text-group">
+                      <dt>Объем</dt>
+                      <dd>500 г</dd>
+                    </div>
+                    <div class="text-group">
+                      <dt>Вкус</dt>
+                      <dd>Курица</dd>
+                    </div>
+                    <div class="text-group">
+                      <dt>Цена</dt>
+                      <dd>700 Р.</dd>
+                    </div>
+                  </dl>
+                </div>
+              </div>
             </div>
             <a class="button catalog-item__button" href="#">заказать</a>
           </li>
 
           <li class="page-catalog__item catalog-item">
             <div class="catalog-item__info">
-              <a class="catalog-item__link" href="chicken-small.html">
-                <img class="catalog-item__img" src="" alt="alt">банка Cat Energy Pro 1000 г
-              </a>
-              <a class="catalog-item__link" href="chicken-small.html">
-                <h3 class="catalog-item__title">Cat Energy Pro 1000 г</h3>
-              </a>
-              <dl class="catalog-item__descriptopn">
-                <dt>Объем</dt>
-                <dd>1000 г</dd>
-                <dt>Вкус</dt>
-                <dd>Курица</dd>
-                <dt>Цена</dt>
-                <dd>1000 Р.</dd>
-              </dl>
+              <div class="catalog-item-container">
+                <a class="catalog-item__link" href="chicken-small.html">
+                  <img class="catalog-item__img" src="img/chicken-big-mobile@1x.jpg" alt=">банка Cat Energy Pro 1000 г">
+                </a>
+                <div class="catalog-item__text">
+                  <a class="catalog-item__link" href="chicken-small.html">
+                    <h3 class="catalog-item__title">Cat Energy Pro 1000 г</h3>
+                  </a>
+                  <dl class="catalog-item__description">
+                    <div class="text-group">
+                      <dt>Объем</dt>
+                      <dd>1000 г</dd>
+                    </div>
+                    <div class="text-group">
+                      <dt>Вкус</dt>
+                      <dd>Курица</dd>
+                    </div>
+                    <div class="text-group">
+                      <dt>Цена</dt>
+                      <dd>1000 Р.</dd>
+                    </div>
+                  </dl>
+                </div>
+              </div>
             </div>
             <a class="button catalog-item__button" href="#">заказать</a>
           </li>
 
           <li class="page-catalog__item catalog-item">
             <div class="catalog-item__info">
-              <a class="catalog-item__link" href="chicken-small.html">
-                <img class="catalog-item__img" src="" alt="alt">банка Cat Energy Pro 500 г
-              </a>
-              <a class="catalog-item__link" href="chicken-small.html">
-                <h3 class="catalog-item__title">Cat Energy Pro 500 г</h3>
-              </a>
-              <dl class="catalog-item__descriptopn">
-                <dt>Объем</dt>
-                <dd>500 г</dd>
-                <dt>Вкус</dt>
-                <dd>Рыба</dd>
-                <dt>Цена</dt>
-                <dd>700 Р.</dd>
-              </dl>
+              <div class="catalog-item-container">
+                <a class="catalog-item__link" href="chicken-small.html">
+                  <img class="catalog-item__img" src="img/fish-small-mobile@1x.jpg" alt="банка Cat Energy Pro 500 г">
+                </a>
+                <div class="catalog-item__text">
+                  <a class="catalog-item__link" href="chicken-small.html">
+                    <h3 class="catalog-item__title">Cat Energy Pro 500 г</h3>
+                  </a>
+                  <dl class="catalog-item__description">
+                    <div class="text-group">
+                      <dt class="text-group__name">Объем</dt>
+                      <dd class="text-group__value">500 г</dd>
+                    </div>
+                    <div class="text-group">
+                      <dt class="text-group__name">Вкус</dt>
+                      <dd class="text-group__value">Рыба</dd>
+                    </div>
+                    <div class="text-group">
+                      <dt class="text-group__name">Цена</dt>
+                      <dd class="text-group__value">700 Р.</dd>
+                    </div>
+                  </dl>
+                </div>
+              </div>
             </div>
             <a class="button catalog-item__button" href="#">заказать</a>
           </li>
 
           <li class="page-catalog__item catalog-item">
             <div class="catalog-item__info">
-              <a class="catalog-item__link" href="chicken-small.html">
-                <img class="catalog-item__img" src="" alt="alt">банка Cat Energy Pro 1000 г
-              </a>
-              <a class="catalog-item__link" href="chicken-small.html">
-                <h3 class="catalog-item__title">Cat Energy Pro 1000 г</h3>
-              </a>
-              <dl class="catalog-item__descriptopn">
-                <dt>Объем</dt>
-                <dd>1000 г</dd>
-                <dt>Вкус</dt>
-                <dd>Рыба</dd>
-                <dt>Цена</dt>
-                <dd>1000 Р.</dd>
-              </dl>
+              <div class="catalog-item-container">
+                <a class="catalog-item__link" href="chicken-small.html">
+                  <img class="catalog-item__img" src="img/fish-big-mobile@1x.jpg" alt="банка Cat Energy Pro 1000 г">
+                </a>
+                <div class="catalog-item__text">
+                  <a class="catalog-item__link" href="chicken-small.html">
+                    <h3 class="catalog-item__title">Cat Energy Pro 1000 г</h3>
+                  </a>
+                  <dl class="catalog-item__description">
+                    <div class="text-group">
+                      <dt>Объем</dt>
+                      <dd>1000 г</dd>
+                    </div>
+                    <div class="text-group">
+                      <dt>Вкус</dt>
+                      <dd>Рыба</dd>
+                    </div>
+                    <div class="text-group">
+                      <dt>Цена</dt>
+                      <dd>1000 Р.</dd>
+                    </div>
+                  </dl>
+                </div>
+              </div>
             </div>
             <a class="button catalog-item__button" href="#">заказать</a>
           </li>
 
           <li class="page-catalog__item catalog-item">
             <div class="catalog-item__info">
-              <a class="catalog-item__link" href="chicken-small.html">
-                <img class="catalog-item__img" src="" alt="alt">банка Cat Energy Slim 500 г
-              </a>
-              <a class="catalog-item__link" href="chicken-small.html">
-                <h3 class="catalog-item__title">Cat Energy Slim 500 г</h3>
-              </a>
-              <dl class="catalog-item__descriptopn">
-                <dt>Объем</dt>
-                <dd>500 г</dd>
-                <dt>Вкус</dt>
-                <dd>Гречка</dd>
-                <dt>Цена</dt>
-                <dd>400 Р.</dd>
-              </dl>
+              <div class="catalog-item-container">
+                <a class="catalog-item__link" href="chicken-small.html">
+                  <img class="catalog-item__img" src="img/buckwheat-small-mobile@1x.jpg" alt="банка Cat Energy Slim 500 г">
+                </a>
+                <div class="catalog-item__text">
+                  <a class="catalog-item__link" href="chicken-small.html">
+                    <h3 class="catalog-item__title">Cat Energy Slim 500 г</h3>
+                  </a>
+                  <dl class="catalog-item__description">
+                    <div class="text-group">
+                      <dt>Объем</dt>
+                      <dd>500 г</dd>
+                    </div>
+                    <div class="text-group">
+                      <dt>Вкус</dt>
+                      <dd>Гречка</dd>
+                    </div>
+                    <div class="text-group">
+                      <dt>Цена</dt>
+                      <dd>400 Р.</dd>
+                    </div>
+                  </dl>
+                </div>
+              </div>
             </div>
             <a class="button catalog-item__button" href="#">заказать</a>
           </li>
 
           <li class="page-catalog__item catalog-item">
             <div class="catalog-item__info">
-              <a class="catalog-item__link" href="chicken-small.html">
-                <img class="catalog-item__img" src="" alt="alt">банка Cat Energy Slim 1000 г
-              </a>
-              <a class="catalog-item__link" href="chicken-small.html">
-                <h3 class="catalog-item__title">Cat Energy Slim 1000 г</h3>
-              </a>
-              <dl class="catalog-item__descriptopn">
-                <dt>Объем</dt>
-                <dd>1000 г</dd>
-                <dt>Вкус</dt>
-                <dd>Гречка</dd>
-                <dt>Цена</dt>
-                <dd>700 Р.</dd>
-              </dl>
+              <div class="catalog-item-container">
+                <a class="catalog-item__link" href="chicken-small.html">
+                  <img class="catalog-item__img" src="img/buckwheat-big-mobile@1x.jpg" alt="банка Cat Energy Slim 1000 г">
+                </a>
+                <div class="catalog-item__text">
+                  <a class="catalog-item__link" href="chicken-small.html">
+                    <h3 class="catalog-item__title">Cat Energy Slim 1000 г</h3>
+                  </a>
+                  <dl class="catalog-item__description">
+                    <div class="text-group">
+                      <dt>Объем</dt>
+                      <dd>1000 г</dd>
+                    </div>
+                    <div class="text-group">
+                      <dt>Вкус</dt>
+                      <dd>Гречка</dd>
+                    </div>
+                    <div class="text-group">
+                      <dt>Цена</dt>
+                      <dd>700 Р.</dd>
+                    </div>
+                  </dl>
+                </div>
+              </div>
             </div>
             <a class="button catalog-item__button" href="#">заказать</a>
           </li>
 
           <li class="page-catalog__item catalog-item">
             <div class="catalog-item__info">
-              <a class="catalog-item__link" href="chicken-small.html">
-                <img class="catalog-item__img" src="" alt="alt">банка Cat Energy Slim 500 г
-              </a>
-              <a class="catalog-item__link" href="chicken-small.html">
-                <h3 class="catalog-item__title">Cat Energy Slim 500 г</h3>
-              </a>
-              <dl class="catalog-item__descriptopn">
-                <dt>Объем</dt>
-                <dd>500 г</dd>
-                <dt>Вкус</dt>
-                <dd>Рис</dd>
-                <dt>Цена</dt>
-                <dd>500 Р.</dd>
-              </dl>
+              <div class="catalog-item-container">
+                <a class="catalog-item__link" href="chicken-small.html">
+                  <img class="catalog-item__img" src="img/rice-small-mobile@1x.jpg" alt="банка Cat Energy Slim 500 г">
+                </a>
+                <div class="catalog-item__text">
+                  <a class="catalog-item__link" href="chicken-small.html">
+                    <h3 class="catalog-item__title">Cat Energy Slim 500 г</h3>
+                  </a>
+                  <dl class="catalog-item__description">
+                    <div class="text-group">
+                      <dt>Объем</dt>
+                      <dd>500 г</dd>
+                    </div>
+                    <div class="text-group">
+                      <dt>Вкус</dt>
+                      <dd>Рис</dd>
+                    </div>
+                    <div class="text-group">
+                      <dt>Цена</dt>
+                      <dd>500 Р.</dd>
+                    </div>
+                  </dl>
+                </div>
+              </div>
             </div>
             <a class="button catalog-item__button" href="#">заказать</a>
           </li>
         </ul>
 
         <div class="page-catalog__more more">
-          <a class="button button--upload-items" href="">+</a>
+          <a class="button--upload-items" href="#">+</a>
           <h3 class="more__promo-title">показать еще 100500 товаров</h3>
           <p class="more__proviso">На самом деле вкусов гораздо больше!</p>
           <a class="button button--show-more" href="#">показать все</a>
         </div>
 
         <div class="page-catalog__addition addition">
-          <h2 class="addition__title title">дополнительные товары</h2>
+          <h2 class="addition__title title">Дополнительные товары</h2>
           <ul class="addition-list">
             <li class="page-catalog__item page-catalog__item--addition addition-item">
               <h3 class="addition-item__title">сахарозаменитель</h3>
-              <dl class="addition-item__descriptopn">
+              <dl class="addition-item__description">
                 <dt>1 Упаковка</dt>
                 <dd>100 Р.</dd>
               </dl>
@@ -193,7 +263,7 @@
 
             <li class="page-catalog__item page-catalog__item--addition addition-item">
               <h3 class="addition-item__title">питьевая вода</h3>
-              <dl class="addition-item__descriptopn">
+              <dl class="addition-item__description">
                 <dt>5 литров</dt>
                 <dd>50 Р.</dd>
               </dl>
@@ -202,7 +272,7 @@
 
             <li class="page-catalog__item page-catalog__item--addition addition-item">
               <h3 class="addition-item__title">молоко</h3>
-              <dl class="addition-item__descriptopn">
+              <dl class="addition-item__description">
                 <dt>1 литр</dt>
                 <dd>100 Р.</dd>
               </dl>
@@ -211,10 +281,10 @@
 
             <li class="page-catalog__item page-catalog__item--addition addition-item">
               <h3 class="addition-item__title">витамины</h3>
-              <dl class="addition-item__descriptopn">
+              <dl class="addition-item__description">
                 <dt>1 Упаковка (30 г)</dt>
                 <dd>300 Р.</dd>
-              </dl>s
+              </dl>
               <a class="button addition-item__button" href="#">заказать</a>
             </li>
           </ul>
@@ -230,7 +300,7 @@
 
     <footer class="page-footer">
       <div class="page-footer__contacts contacts ">
-        <div class="contacts__info">
+        <div class="contacts__info contacts__info--form">
           <h2 class="contacts__title">
             приглашаем к сотрудничеству дилеров!
           </h2>
@@ -253,11 +323,10 @@
           <span class="visually-hidden">Мы в Фэйсбуке</span>
         </a>
       </div>
-
       <div class="page-footer__copyright copyright">
         <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">HTML Academy</a>
-        <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
-          <img class="copyright__logo" src="" alt="Логотип html-academy">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
+          <img class="copyright__logo" src="./img/htmlacademy.svg" alt="Логотип html-academy">
         </a>
       </div>
     </footer>
