--- a/source/index.html
+++ b/source/index.html
@@ -3,66 +3,70 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
     <link href="./css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header">
+    <header class="page-header page-header--main">
       <nav class="main-nav">
-        <a class="main-nav__logo" href="#">
-          <img class="main-nav__icon main-nav__icon--logo" src="img/icon-logo-mobile.svg" alt="">
-        </a>
-        <a class="main-nav__logo" href="#">
-          <img class="main-nav__icon main-nav__icon--text" src="img/logo-mobile-header.svg" alt="">
-        </a>
-        <div class="menu">
-          <div class="menu__logo">
-            <img src="img/icon-mobile-menu.svg" alt="logo">
-          </div>
-          <div class="main-nav__list category-list visually-hidden">
-            <a class="menu__link" href="index.html">Главная</a>
-            <a class="menu__link" href="form.html">Подбор программы</a>
-            <a class="menu__link menu__link--active" href="catalog.html">Каталог продукции</a>
-          </div>
+        <div class="main-nav__logo-wrapper">
+          <a class="main-nav__logo" href="#">
+            <img class="main-nav__img main-nav__img--logo" src="img/icon-logo-mobile.svg" alt="">
+          </a>
+          <a class="main-nav__logo" href="#">
+            <img class="main-nav__img main-nav__img--logo" src="img/logo-mobile-header.svg" alt="">
+          </a>
+          <div class="main-nav__toggle"></div>
+        </div>
+        <div class="menu menu__list">
+          <a class="menu__link" href="index.html">Главная</a>
+          <a class="menu__link menu__link--active" href="catalog.html">Каталог продукции</a>
+          <a class="menu__link" href="form.html">Подбор программы</a>
         </div>
       </nav>
       <div class="slogan">
-        <h1 class="slogan__title">Функциональное питание для котов</h1>
-        <h2 class="slogan__reason">занялся собой? займись котом!</h2>
+        <div class="slogan__text">
+          <h1 class="slogan__title">Функциональное питание для котов</h1>
+          <h2 class="slogan__reason">занялся собой? займись котом!</h2>
+        </div>
         <img class="food-packaging" src="img/index-can-mobile@1x.png" alt="Cat energy Pro">
         <a class="button page-header__button" href="form.html">Подобрать программу</a>
       </div>
     </header>
 
     <main class="page-main">
-      <section class="dietary">
-        <h1 class="dietary__title">похудение</h1>
-        <p class="dietary__info">
-          Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-        </p>
-        <a class="dietary__link-to" href="catalog.html">Каталог Slim</a>
-      </section>
+      <article class="page-main__program-selection">
+        <section class="dietary">
+          <h1 class="dietary__title">похудение</h1>
+          <p class="dietary__info">
+            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+          </p>
+          <a class="dietary__link-to" href="catalog.html">Каталог Slim</a>
+        </section>
 
-      <section class="dietary">
-        <h1 class="dietary__title">набор массы</h1>
-        <p class="dietary__info">
-          Зарабатывать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-        </p>
-        <a class="dietary__link-to" href="catalog.html">Каталог Pro</a>
-      </section>
+        <section class="dietary">
+          <h1 class="dietary__title">набор массы</h1>
+          <p class="dietary__info">
+            Зарабатывать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+          </p>
+          <a class="dietary__link-to" href="catalog.html">Каталог Pro</a>
+        </section>
+      </article>
 
       <article class="features">
         <h1 class="features__title">Как это работает</h1>
         <ul class="items features__items">
-          <li class="feature feature--healthy">
+          <li class="features__item features__item--healthy">
             Функциональное питание содержит только полезные питательные вещества.
           </li>
-          <li class="feature feature__easy-cooking">
+          <li class="features__item features__item--cooking">
             Выпускается в виде порошка, которые нужно лишь залить кипятком и готово.
           </li>
-          <li class="feature feature__apply">
+          <li class="features__item features__item--apply">
             Замените один-два приема обычной еды на наше функциональное питание.
           </li>
-          <li class="feature feature-quick">
+          <li class="features__item features__item--quick">
             Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
           </li>
         </ul>
@@ -70,28 +74,37 @@
 
       <article class="proof">
         <h1 class="proof__title">Живой пример</h1>
-        <p class="proof__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Сat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-        </p>
-        <div class="proof__group">
-          <dl class="proof__case-item">
-            <dt class="proof__case-number">5 кг</dt>
-            <dd class="proof__case-description">cнижение веса</dd>
-          </dl>
-          <dl class="proof__case-item">
-            <dt class="proof__case-number">60 ДНЕЙ</dt>
-            <dd class="proof__case-description">затрачено времени</dd>
-          </dl>
-        </div>
-        <h3 class="food-price">затраты на питание: 15 000 руб.</h3>
-        <img class="before-img" src="img/before-mobile@1x.png" alt="Фото-пруф кота до изменения">
-        <img class="after-img visually-hidden" src="" alt="Фото-пруф кота после изменения">
-        <div class="obesity-state">
-          <button class="toggle-control">было</button>
-          <div class="scale">
-            <div class="scale__filling"></div>
+        <div class="proof__wrapper">
+          <div class="proof__wrapper-text">
+            <p class="proof__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Сat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+            </p>
+            <div class="proof__group">
+              <dl class="proof__case-item">
+                <dt class="proof__case-number">5 кг</dt>
+                <dd class="proof__case-description">cнижение веса</dd>
+              </dl>
+              <dl class="proof__case-item">
+                <dt class="proof__case-number">60 ДНЕЙ</dt>
+                <dd class="proof__case-description">затрачено времени</dd>
+              </dl>
+            </div>
+            <h3 class="food-price">затраты на питание: 15 000 руб.</h3>
           </div>
-          <button class="toggle-control">стало</button>
+          <img class="proof__img proof__img--before" src="img/before-mobile@1x.png" alt="Фото-пруф кота до изменения">
+          <img class="proof__img proof__img--after" src="img/after-mobile@1x.png" alt="Фото-пруф кота после изменения">
+          <div class="filter-wrapper">
+          <div class="filter-range">
+            <button class="toggle-control toggle-control--left">было</button>
+            <div class="range-controls">
+              <div class="scale">
+                <div class="bar"></div>
+              </div>
+              <div class="range-toggle range-toggle-min"></div>
+            </div>
+            <button class="toggle-control toggle-control--right">стало</button>
+          </div>
         </div>
+      </div>
       </article>
     </main>
 
