--- a/source/form.html
+++ b/source/form.html
@@ -8,21 +8,21 @@
     <link href="./css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header">
-      <nav class="main-nav">
+    <header class="page-header page-header--closed">
+      <nav class="main-nav main-nav--closed">
         <div class="main-nav__logo-wrapper">
           <a class="main-nav__logo" href="#">
             <img class="main-nav__img main-nav__img--logo" src="img/icon-logo-mobile.svg" alt="">
           </a>
           <a class="main-nav__logo" href="#">
-            <img class="main-nav__img main-nav__img--logo" src="img/logo-mobile-header.svg" alt="">
+            <img class="main-nav__img main-nav__img--text" src="img/logo-mobile-header.svg" alt="">
           </a>
           <div class="main-nav__toggle"></div>
         </div>
         <div class="menu menu__list">
           <a class="menu__link" href="index.html">Главная</a>
-          <a class="menu__link menu__link--active" href="catalog.html">Каталог продукции</a>
-          <a class="menu__link" href="form.html">Подбор программы</a>
+          <a class="menu__link menu__link" href="catalog.html">Каталог продукции</a>
+          <a class="menu__link menu__link--active" href="form.html">Подбор программы</a>
         </div>
       </nav>
     </header>
@@ -68,7 +68,7 @@
         </div>
 
         <div class="form__personal-info personal-info">
-          <h2 class="form__title">Контактные данные (владельца кота)</h2>
+          <h2 class="form__title"><span>Контактные данные (владельца кота)</span></h2>
           <div class="field-container info personal-info__field">
             <label class="form__label" for="mail_field">E-MAIL:<sup>*</sup>
             </label>
@@ -82,12 +82,12 @@
         </div>
 
         <div class="form__comment comment">
-          <h2 class="comment__title">Комметарий</h2>
+          <h2 class="comment__title"><span>Комментарий</span></h2>
           <textarea class="comment__info" name="comment" placeholder="расскажите обо всех повадках кота"></textarea>
         </div>
 
         <div class="form__extra extra">
-          <h2 class="extra__title">Дополнительно</h2>
+          <h2 class="extra__title"><span>Дополнительно</span></h2>
           <ul class="extra__list">
             <li class="extra__item">
               <input class="form__checkbox" type="checkbox" name="sweetener" value="sweet" required="required"/>
@@ -109,7 +109,7 @@
         </div>
         <div class="form__action form-click">
           <button class="button form__button" type="submit" name="button">
-            Отправить завку
+            Отправить заявку
           </button>
           <small class="form__legend legend ">
             <sup>*</sup>
@@ -123,32 +123,93 @@
       <div class="page-footer__contacts contacts ">
         <div class="contacts__info contacts__info--form">
           <h2 class="contacts__title">
-            приглашаем к сотрудничеству дилеров!
+            приглашаем <br> к сотрудничеству дилеров!
           </h2>
           <p class="contacts__address">
-            ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+            <span>ул. Большая Конюшенная, д. 19/8</span>
+            Санкт-Петербург
           </p>
         </div>
         <iframe class="contacts__map" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJKadbyg8xlkYRn4c8SdRTnOo&key=AIzaSyDsbAQS4KrgZMDOK9vRIrUqgumi9reKE9c"></iframe>
         <span class="about-logo about-logo--more contacts__about-logo"></span>
       </div>
+      <div class="footer-wrapper">
+        <div class="page-footer__container">
+          <a class="page-footer__logo" href="#">
+            <img class="footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Кэт Энерджи">
+          </a>
 
-      <div class="page-footer__social social ">
-        <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-          <span class="visually-hidden">Мы в ВКонтакте</span>
-        </a>
-        <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy/">
-          <span class="visually-hidden">Мы в Инстаграме</span>
-        </a>
-        <a class="social__link social__link--facebook" href="https://b-m.facebook.com/htmlacademy/">
-          <span class="visually-hidden">Мы в Фэйсбуке</span>
-        </a>
-      </div>
-      <div class="page-footer__copyright copyright">
-        <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">HTML Academy</a>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
-          <img class="copyright__logo" src="./img/htmlacademy.svg" alt="Логотип html-academy">
-        </a>
+          <div class="page-footer__social social ">
+            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Мы в ВКонтакте</span>
+              <svg version="1.1" width="22" height="12" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
+                <g>
+                  <path
+                    d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2
+                  c0,0.1,0,0.6-0.3,0.9c-0.3,0.3-0.8,0.4-0.9,0.4l-1.4,0c-0.7,0-3.2-0.2-5.4-2.3C2.5,7.1,0.2,2.2,0.1,2C0,1.6-0.1,1.2,0.2,0.9
+                  c0.3-0.3,0.8-0.4,1-0.4l3,0l0.1,0c0.1,0,0.4,0.1,0.7,0.3c0.3,0.2,0.4,0.5,0.5,0.6c0,0,0.5,1.1,1.1,2c1,1.5,1.4,1.9,1.5,2
+                  C8.2,5,8.3,4,8.2,3.1c0-0.4-0.1-0.8-0.2-1C7.9,2,7.7,1.9,7.5,1.9L6.9,1.4C6.9,0.9,7.4,0.5,7.8,0.3C8.3,0.1,9.1,0,10.1,0l0.5,0
+                  c0.9,0,1.2,0.1,1.6,0.1c1.2,0.3,1.2,1.3,1.1,2.5c0,0.4,0,0.8,0,1.2c0,0.1,0,0.2,0,0.4c0,0.3,0,0.8,0.1,1c0.2-0.1,0.6-0.5,1.5-1.9
+                  c0.6-0.9,1-1.9,1.1-2.1l0,0c0.1-0.3,0.4-0.7,1.2-0.7l3.1,0c0,0,0.1,0,0.3,0c0.7,0,1.2,0.2,1.3,0.7c0.2,0.5,0.1,1.3-1.7,3.5
+                  c-0.3,0.3-0.5,0.6-0.7,0.9C19,6,18.6,6.6,18.6,6.7c0,0.1,0.5,0.5,0.9,0.9c1.1,0.9,1.9,1.7,2.2,2.3c0.4,0.6,0.3,1,0.2,1.3
+                  c-0.3,0.7-1.2,0.7-1.4,0.8l-2.8,0C17.7,12,17.6,12,17.6,12z M13.7,8.3c0.7,0,1.2,0.6,1.8,1.2c0.4,0.4,0.7,0.8,1.1,1
+                  c0.5,0.3,1,0.3,1,0.3l0.1,0l2.8,0c0.1,0,0.3-0.1,0.4-0.1c0,0,0-0.1-0.1-0.1c-0.3-0.5-1-1.3-2-2.1c-0.9-0.7-1.3-1.1-1.4-1.7
+                  c0-0.6,0.4-1.1,1.2-2.1c0.2-0.2,0.4-0.5,0.7-0.8c1.1-1.4,1.4-2,1.5-2.3c-0.1,0-0.5,0-0.5,0l-3.2,0c-0.1,0-0.2,0-0.2,0
+                  C16.9,2,16.4,3.1,15.8,4c-1.4,2.1-2,2.4-2.5,2.4c-0.1,0-0.3,0-0.4-0.1c-0.7-0.4-0.7-1.4-0.7-2.1c0-0.1,0-0.2,0-0.3
+                  c0-0.5,0-0.9,0-1.3c0.1-1.3,0-1.3-0.3-1.4c-0.3-0.1-0.5-0.1-1.4-0.1l-0.5,0c-0.5,0-1,0-1.4,0.1c0.1,0.1,0.1,0.1,0.2,0.2
+                  c0.4,0.5,0.4,1.5,0.4,1.7c0.1,1.3,0,2.9-0.7,3.3C8.4,6.4,8.3,6.5,8.1,6.5C7.5,6.5,6.8,5.8,5.6,4C5,2.9,4.5,1.8,4.5,1.8
+                  c0,0,0-0.1-0.1-0.1c-0.1,0-0.2-0.1-0.2-0.1l-2.9,0c0,0,0,0-0.1,0c0.4,0.9,2.5,5,4.8,7.2c2,1.9,4.3,2,4.7,2l1.4,0c0,0,0.2,0,0.2-0.1
+                  c0,0,0,0,0-0.1c0-0.2,0-2,1.2-2.3C13.5,8.3,13.6,8.3,13.7,8.3z"></path>
+                </g>
+              </svg>
+            </a>
+            <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy/">
+              <span class="visually-hidden">Мы в Инстаграме</span>
+              <svg version="1.1" width="16" height="16" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve">
+                <path
+                  class="st0"
+                  d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1
+                L11.8,1 M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0L11.8,0z"></path>
+                <path class="st0" d="M8,4.9c1.7,0,3.1,1.4,3.1,3.1c0,1.7-1.4,3.1-3.1,3.1c-1.7,0-3.1-1.4-3.1-3.1C4.9,6.3,6.3,4.9,8,4.9 M8,3.9
+                C5.7,3.9,3.9,5.7,3.9,8s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9L8,3.9z"></path>
+                <circle class="st0" cx="12.3" cy="3.7" r="0.9"></circle>
+              </svg>
+            </a>
+            <a class="social__link social__link--facebook" href="https://b-m.facebook.com/htmlacademy/">
+              <span class="visually-hidden">Мы в Фэйсбуке</span>
+              <svg version="1.1" width="10" height="19" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
+                <g>
+                  <path
+                    d="M7.1,19H2v-8.8H0V5.8h1.9c-0.1-2,0.2-3.4,1.1-4.4C3.8,0.5,5,0.1,6.5,0L10,0v4.2H7.2C7.1,4.4,7,5,7,5.8H10v4.4H7.1V19z
+                    M3.1,18h2.8V9.1h2.9V6.8H5.9l0-0.5c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6
+                  H1.1v2.3h2V18z"></path>
+                </g>
+              </svg>
+            </a>
+          </div>
+
+          <div class="page-footer__copyright copyright">
+            <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">HTML Academy</a>
+            <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
+              <svg
+                version="1.0"
+                id="Layer_1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                x="0px"
+                y="0px"
+                width="27"
+                height="34"
+                viewbox="0 0 26.943 34.09"
+                enable-background="new 0 0 26.943 34.09"
+                xml:space="preserve"
+                fill="#666666">
+                <path
+                  d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.013,1.415l5.904,3.513l-0.86,0.507l-5.031-2.992l-0.013,1.415l3.827,2.275l-0.782,0.523l-3.032-1.787 l-0.013,1.413l1.852,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.015,1.044l-7.941-4.728L5.395,19.65 l7.979,4.796l0.017,1.076l-7.972-4.741l-0.013,1.415l8.021,4.821l0.045,0.026l8.143-4.872v-1.268l-0.011-0.148v-3.761l3.415-2.036 v10.02L13.472,31.85L1.925,24.979V15.127z"></path>
+              </svg>
+            </a>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
